feat(order): add order line items support with Saga refactoring
- feat(order): add OrderItem value object with ProductSnapshot for order line items
- feat(order): add OrderItemDO and OrderItemMapper for persistence
- feat(order): add OrderItemReadModel for CQRS read side
- feat(order): add PaymentStatus value object for payment tracking
- feat(order): move CreateOrderSaga from domain/saga to application/saga (DDD alignment)
- feat(order): enhance CreateOrderSaga with OrderItem creation and batch persistence
- feat(order): add OrderItem support to OrderAggregate.createOrder()
- feat(order): update OrderDO with line item count field
- feat(order): add Flyway migration V2 (create eo_order_item table) and V3 (migrate existing orders)
- feat(order): update OrderDataConverter to handle OrderItem mapping
- feat(order): update all inbound adapters (jobs, MQ subscribers, controllers) for OrderItem
- test(order): add CreateOrderSagaCompensationTest with full Saga flow and compensation tests
- test(order): add OrderItem value object unit tests